<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/curve_shape"
    android:orientation="vertical"
    android:padding="@dimen/dialog_padding">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/views_padding"
        android:text="@string/add_new_vision"
        android:textColor="@android:color/black"
        android:textSize="@dimen/heading_font_size"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/views_padding">

        <TextView
            android:layout_gravity="center_vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rescuer_name"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sub_heading_font_size" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimaryLight">

            <Spinner
                android:id="@+id/spinner_char_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="@dimen/views_padding">

        <Button
            android:id="@+id/choose_image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_image"
            android:textAllCaps="false"
            android:textSize="@dimen/sub_heading_font_size" />

    </LinearLayout>


</LinearLayout>